Adds missing Plural-Forms definitions to the po files
Signed-off-by: Luís Pereira <luis.artur.pereira@gmail.com>

--- a/po/el.po
+++ b/po/el.po
@@ -17,6 +17,7 @@ msgstr ""
 "X-Poedit-Language: Greek\n"
 "X-Poedit-Country: GREECE\n"
 "X-Poedit-SourceCharset: utf-8\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #: _translatorinfo.cpp:1
 msgid ""
