--- a/po/cs.po
+++ b/po/cs.po
@@ -5,7 +5,7 @@
 # Jirka Vilim <web@tets.cz>, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: cs\n"
+"Project-Id-Version: kcheckgmail 0.5.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-09-23 20:17-0500\n"
 "PO-Revision-Date: 2008-07-25 17:11+0200\n"
