--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: de\n"
+"Project-Id-Version: kcheckgmail 0.5.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-09-23 20:17-0500\n"
 "PO-Revision-Date: 2004-11-11 15:22+0100\n"
