--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@
 # Raphael Geissert <atomo64@gmail.com>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: es\n"
+"Project-Id-Version: kcheckgmail 0.5.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-09-23 20:17-0500\n"
 "PO-Revision-Date: 2007-09-23 20:22-0500\n"
