--- a/po/fr.po
+++ b/po/fr.po
@@ -6,7 +6,7 @@
 # Raphael Geissert <atomo64@gmail.com>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: fr\n"
+"Project-Id-Version: kcheckgmail 0.5.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-07-11 18:53-0500\n"
 "PO-Revision-Date: 2007-07-22 21:21-0500\n"
