--- a/po/hu.po
+++ b/po/hu.po
@@ -8,7 +8,7 @@
 # Avramucz Péter <muczyjoe@gmail.com>, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: hu\n"
+"Project-Id-Version: kcheckgmail 0.5.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-09-23 20:17-0500\n"
 "PO-Revision-Date: 2008-03-13 22:18+0100\n"
