--- a/po/it.po
+++ b/po/it.po
@@ -4,7 +4,7 @@
 # Samuele Kaplun <Samuele.Kaplun@cern.ch>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: it\n"
+"Project-Id-Version: kcheckgmail 0.5.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-09-23 20:17-0500\n"
 "PO-Revision-Date: 2007-07-12 09:12+0200\n"
