--- a/po/lt.po
+++ b/po/lt.po
@@ -5,7 +5,7 @@
 # Andrius Štikonas <stikonas@gmail.com>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: lt\n"
+"Project-Id-Version: kcheckgmail 0.5.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-09-23 20:17-0500\n"
 "PO-Revision-Date: 2007-07-09 16:05+0300\n"
