--- a/po/sk.po
+++ b/po/sk.po
@@ -8,7 +8,7 @@
 # Peter Mendel <peter.mendel@gmail.com>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: sk\n"
+"Project-Id-Version: kcheckgmail 0.5.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-09-23 20:17-0500\n"
 "PO-Revision-Date: 2007-03-25 01:18+0100\n"
