--- a/po/tr.po
+++ b/po/tr.po
@@ -8,7 +8,7 @@
 # Uğur Çetin <jnmbk@users.sourceforge.net>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: tr\n"
+"Project-Id-Version: kcheckgmail 0.5.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-09-23 20:17-0500\n"
 "PO-Revision-Date: 2007-07-09 16:31+0300\n"
