--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -5,7 +5,7 @@
 # wgzhao <wgzhao@redflag-linux.com>, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: kcheckgmail\n"
+"Project-Id-Version: kcheckgmail 0.5.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-09-23 20:17-0500\n"
 "PO-Revision-Date: 2008-03-18 10:50+0800\n"
